更新工程文件

--- a/LC-Finder.vcxproj
+++ b/LC-Finder.vcxproj
@@ -44,6 +44,8 @@
     <None Include="res\ui.css" />
   </ItemGroup>
   <ItemGroup>
+    <Xml Include="res\ui-view-picture-info.xml" />
+    <Xml Include="res\ui-view-picture.xml" />
     <Xml Include="res\ui.xml">
       <SubType>Designer</SubType>
     </Xml>
