--- a/LC-Finder.vcxproj
+++ b/LC-Finder.vcxproj
@@ -33,6 +33,7 @@
     <ClCompile Include="src\ui\view_folders.c" />
     <ClCompile Include="src\ui\view_home.c" />
     <ClCompile Include="src\ui\view_picture.c" />
+    <ClCompile Include="src\ui\view_picture_info.c" />
     <ClCompile Include="src\ui\view_settings.c" />
     <ClCompile Include="src\ui\sidebar.c" />
     <ClCompile Include="src\ui\ui.c" />
