--- a/LC-Finder.vcxproj
+++ b/LC-Finder.vcxproj
@@ -30,6 +30,7 @@
     <ClCompile Include="src\ui\dialog_confirm.c" />
     <ClCompile Include="src\ui\dialog_prompt.c" />
     <ClCompile Include="src\ui\filesync.c" />
+    <ClCompile Include="src\ui\starrating.c" />
     <ClCompile Include="src\ui\thumbview.c" />
     <ClCompile Include="src\ui\view_folders.c" />
     <ClCompile Include="src\ui\view_home.c" />
@@ -60,6 +61,7 @@
     <ClInclude Include="include\file_search.h" />
     <ClInclude Include="include\finder.h" />
     <ClInclude Include="include\sha1.h" />
+    <ClInclude Include="include\starrating.h" />
     <ClInclude Include="include\thumb_db.h" />
     <ClInclude Include="include\thumb_cache.h" />
     <ClInclude Include="include\thumbview.h" />
