--- a/LC-Finder.vcxproj.filters
+++ b/LC-Finder.vcxproj.filters
@@ -81,6 +81,9 @@
     <ClCompile Include="src\ui\dialog_prompt.c">
       <Filter>源文件\ui</Filter>
     </ClCompile>
+    <ClCompile Include="src\ui\starrating.c">
+      <Filter>源文件\ui</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="LICENSE" />
@@ -135,6 +138,9 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="include\dialog.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="include\starrating.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
