--- a/LC-Finder.vcxproj
+++ b/LC-Finder.vcxproj
@@ -22,12 +22,12 @@
     <ClCompile Include="src\finder.c" />
     <ClCompile Include="src\lib\common.c" />
     <ClCompile Include="src\lib\file_cache.c" />
-    <ClCompile Include="src\lib\file_info.c" />
     <ClCompile Include="src\lib\file_search.c" />
     <ClCompile Include="src\lib\sha1.c" />
     <ClCompile Include="src\lib\thumb_db.c" />
     <ClCompile Include="src\lib\thumb_cache.c" />
     <ClCompile Include="src\ui\dialog_confirm.c" />
+    <ClCompile Include="src\ui\dialog_progress.c" />
     <ClCompile Include="src\ui\dialog_prompt.c" />
     <ClCompile Include="src\ui\filesync.c" />
     <ClCompile Include="src\ui\progressbar.c" />
