--- a/LC-Finder.vcxproj.filters
+++ b/LC-Finder.vcxproj.filters
@@ -45,9 +45,6 @@
     <ClCompile Include="src\lib\sha1.c">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="src\lib\file_info.c">
-      <Filter>源文件</Filter>
-    </ClCompile>
     <ClCompile Include="src\lib\common.c">
       <Filter>源文件</Filter>
     </ClCompile>
@@ -85,6 +82,9 @@
       <Filter>源文件\ui</Filter>
     </ClCompile>
     <ClCompile Include="src\ui\progressbar.c">
+      <Filter>源文件\ui</Filter>
+    </ClCompile>
+    <ClCompile Include="src\ui\dialog_progress.c">
       <Filter>源文件\ui</Filter>
     </ClCompile>
   </ItemGroup>
