--- a/LC-Finder.vcxproj.filters
+++ b/LC-Finder.vcxproj.filters
@@ -90,6 +90,9 @@
     <ClCompile Include="src\ui\browser.c">
       <Filter>源文件\ui</Filter>
     </ClCompile>
+    <ClCompile Include="src\ui\timeseparator.c">
+      <Filter>源文件\ui</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="LICENSE" />
@@ -153,6 +156,9 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="include\browser.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="include\timeseparator.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
