--- a/LC-Finder.vcxproj.filters
+++ b/LC-Finder.vcxproj.filters
@@ -93,6 +93,12 @@
     <ClCompile Include="src\ui\timeseparator.c">
       <Filter>源文件\ui</Filter>
     </ClCompile>
+    <ClCompile Include="src\ui\textview_i18n.c">
+      <Filter>源文件\ui</Filter>
+    </ClCompile>
+    <ClCompile Include="src\lib\i18n.c">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="LICENSE" />
@@ -159,6 +165,12 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="include\timeseparator.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="include\textview_i18n.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="include\i18n.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
